[gd_scene load_steps=17 format=2]

[ext_resource path="res://Tools/Materials/Door-side.tres" type="Material" id=1]
[ext_resource path="res://Tools/Materials/Door_Plate.tres" type="Material" id=2]
[ext_resource path="res://Tools/Materials/Door-Gate.tres" type="Material" id=5]
[ext_resource path="res://Tools/Door.gd" type="Script" id=6]
[ext_resource path="res://Tools/Sounds/411110__kernschall__thin-metal-sliding-door-open-sqeaking.wav" type="AudioStream" id=7]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="ConcavePolygonShape" id=3]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[sub_resource type="CubeMesh" id=6]

[sub_resource type="CubeMesh" id=7]

[sub_resource type="SpatialMaterial" id=11]
albedo_color = Color( 0.501961, 0.0470588, 0.0470588, 1 )
metallic = 0.88
metallic_specular = 0.54
refraction_enabled = true
refraction_scale = 0.38
refraction_texture_channel = 0

[sub_resource type="SpatialMaterial" id=12]
albedo_color = Color( 0.0470588, 0.501961, 0.0666667, 1 )
metallic = 0.88
metallic_specular = 0.54
refraction_enabled = true
refraction_scale = 0.38
refraction_texture_channel = 0

[sub_resource type="BoxShape" id=10]
extents = Vector3( 0.167887, 0.158345, 0.182961 )

[sub_resource type="SpatialMaterial" id=13]
albedo_color = Color( 0.501961, 0.0470588, 0.0470588, 1 )
metallic = 0.88
metallic_specular = 0.54
refraction_enabled = true
refraction_scale = 0.38
refraction_texture_channel = 0

[sub_resource type="SpatialMaterial" id=14]
albedo_color = Color( 0.0470588, 0.501961, 0.0666667, 1 )
metallic = 0.88
metallic_specular = 0.54
refraction_enabled = true
refraction_scale = 0.38
refraction_texture_channel = 0

[sub_resource type="CubeMesh" id=8]

[sub_resource type="ConcavePolygonShape" id=9]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[node name="Door" type="Spatial"]
script = ExtResource( 6 )

[node name="door-left" type="MeshInstance" parent="."]
transform = Transform( 2, 0, 0, 0, 7, 0, 0, 0, 4, 0, 9.469, -9.4 )
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )

[node name="StaticBody" type="StaticBody" parent="door-left"]

[node name="CollisionShape" type="CollisionShape" parent="door-left/StaticBody"]
shape = SubResource( 3 )

[node name="door-right" type="MeshInstance" parent="."]
transform = Transform( 2, 0, 0, 0, 7, 0, 0, 0, 4, 0, 9.469, 9.4 )
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )

[node name="StaticBody" type="StaticBody" parent="door-right" groups=["Door_Button"]]

[node name="CollisionShape" type="CollisionShape" parent="door-right/StaticBody"]
shape = SubResource( 3 )

[node name="Plate1" type="MeshInstance" parent="door-right"]
transform = Transform( 8.71704e-10, -0.199423, -6.41385e-09, -0.133534, -5.83696e-08, -1.41213e-22, -6.60024e-16, 1.50996e-07, -0.213, -0.886701, -0.123524, -0.366716 )
mesh = SubResource( 6 )
material/0 = ExtResource( 2 )

[node name="RedLed" type="MeshInstance" parent="door-right/Plate1"]
transform = Transform( 0.222444, 6.40632e-08, 2.84456e-15, -4.49131e-09, 0.555355, 5.91337e-09, 1.37708e-15, -1.64011e-07, 0.368735, -0.537276, 1.0956, 1.04904e-05 )
mesh = SubResource( 7 )
material/0 = SubResource( 11 )

[node name="GreenLed" type="MeshInstance" parent="door-right/Plate1"]
transform = Transform( 0.222444, 6.40632e-08, 2.84456e-15, -4.49131e-09, 0.555355, 5.91337e-09, 1.37708e-15, -1.64011e-07, 0.368736, 0.515829, 1.0956, 1.04904e-05 )
mesh = SubResource( 7 )
material/0 = SubResource( 12 )

[node name="Area1" type="Area" parent="door-right/Plate1"]
transform = Transform( 1.05625e-06, -14.8129, -1.82282e-13, -2.41642, -6.47491e-08, 4.17012e-07, -1.713e-06, -4.3532e-20, -12.966, -0.662706, -10.8135, 2.1525 )

[node name="CollisionShape" type="CollisionShape" parent="door-right/Plate1/Area1"]
transform = Transform( 1, -8.47033e-22, 0, -2.53471e-35, 1, 2.52435e-29, 0, -2.52435e-29, 1, 0.727016, 0, 0 )
shape = SubResource( 10 )

[node name="Plate2" type="MeshInstance" parent="door-right"]
transform = Transform( 5.85733e-09, -0.19, -1.86211e-08, -0.134, -8.30516e-09, 0, -5.12064e-16, 1.66103e-08, -0.213, 0.97558, -0.124, -0.367 )
mesh = SubResource( 6 )
material/0 = ExtResource( 2 )

[node name="RedLed" type="MeshInstance" parent="door-right/Plate2"]
transform = Transform( 0.222444, 6.40632e-08, 2.84456e-15, -4.49131e-09, 0.555355, 5.91336e-09, 1.37708e-15, -1.64011e-07, 0.368735, -0.537276, -1.02914, 1.04904e-05 )
mesh = SubResource( 7 )
material/0 = SubResource( 13 )

[node name="GreenLed" type="MeshInstance" parent="door-right/Plate2"]
transform = Transform( 0.222444, 6.40632e-08, 2.84456e-15, -4.49131e-09, 0.555355, 5.91336e-09, 1.37708e-15, -1.64011e-07, 0.368736, 0.515829, -0.816742, 1.04904e-05 )
mesh = SubResource( 7 )
material/0 = SubResource( 14 )

[node name="Area2" type="Area" parent="door-right/Plate2"]
transform = Transform( 1.57194e-07, -14.7614, -7.87586e-14, -2.53626, -4.55064e-07, 1.27074e-06, -1.97785e-07, 1.67697e-21, -12.966, -0.663962, 15.0312, 0.469976 )

[node name="CollisionShape" type="CollisionShape" parent="door-right/Plate2/Area2"]
transform = Transform( 1, -1.35525e-20, 3.38813e-20, -5.2883e-35, 0.999999, 3.63507e-27, 0, 2.52435e-29, 1, 0.109226, 0, -0.130616 )
shape = SubResource( 10 )

[node name="Gate" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 7.15409, 0, 0, 0, 5.28913, 0, 9.69227, 0 )
mesh = SubResource( 8 )
material/0 = ExtResource( 5 )

[node name="StaticBody" type="StaticBody" parent="Gate"]

[node name="CollisionShape" type="CollisionShape" parent="Gate/StaticBody"]
shape = SubResource( 9 )

[node name="DoorSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.188354, 9.70726, 0 )
stream = ExtResource( 7 )
unit_db = 21.238
max_db = 6.0

[node name="Timer" type="Timer" parent="."]
wait_time = 5.997
one_shot = true

[connection signal="body_entered" from="door-right/Plate1/Area1" to="." method="_button_pressed"]
[connection signal="body_entered" from="door-right/Plate2/Area2" to="." method="_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
